dnl Process this file with autoconf to produce a configure script.
AC_INIT(sv_parser/sieve.y)
AM_INIT_AUTOMAKE(libsieve, 2.2.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl Odd Lex and Yacc things
AM_PROG_LEX
AC_DECL_YYTEXT

dnl AC_ARG_PROGRAM

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h unistd.h alloca.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_C_BIGENDIAN
AC_CHECK_HEADERS(endian.h)

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF

AM_CONFIG_HEADER(config.h)

AC_OUTPUT(sv_parser/Makefile sv_regex/Makefile sv_interface/Makefile sv_util/Makefile sv_test/Makefile sv_include/Makefile Makefile)
